recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:9: error: identifier expected but ']' found.
return tableau[]
               ^butLast:10: error: ']' expected but '}' found.
}
^